--- a/website/src/components/header/header.astro
+++ b/website/src/components/header/header.astro
@@ -128,6 +128,7 @@ import Search from "./search.astro";
       <Link class="item link" href="/docs/intro">Docs</Link>
       <Link class="item link" href="/playground">Playground</Link>
       <Link class="item link" href="https://typespec.io">TypeSpec Core Docs</Link>
+      <Link class="item link" href="/can-i-use/http">Can I Use (Azure Client)</Link>
     </div>
     <div class="items right">
       <Link
