--- a/website/src/pages/can-i-use/http.astro
+++ b/website/src/pages/can-i-use/http.astro
@@ -8,14 +8,19 @@ import {
 const options: CoverageFromAzureStorageOptions = {
   storageAccountName: "typespec",
   containerName: "coverage",
-  manifestContainerName: "manifests-typespec",
+  manifestContainerName: "manifests-azure",
   emitterNames: [
-    "@typespec/http-client-python",
-    "@typespec/http-client-csharp",
+    "@azure-tools/typespec-python",
+    "@azure-tools/typespec-go",
+    "@azure-tools/typespec-csharp",
+    "@azure-typespec/http-client-csharp",
     "@azure-tools/typespec-ts-rlc",
     "@azure-tools/typespec-ts-modular",
-    "@typespec/http-client-java",
+    "@azure-tools/typespec-java",
+    "@azure-tools/typespec-cpp",
+    "@azure-tools/typespec-rust",
   ],
+  modes: ["azure"],
 };
 ---
 
