--- a/website/src/css/tsp.css
+++ b/website/src/css/tsp.css
@@ -20,3 +20,8 @@
 .sl-markdown-content code {
   overflow-wrap: normal;
 }
+
+header.header {
+  padding: 0;
+  padding-inline-end: unset !important;
+}
